--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <div id="app"></div>
   </body>
   <script data-main="js/main" src="js/lib/require.js"></script>
-</html>
+</html>x
