Change sass to css. Disable cache busting.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- build:css(.tmp) sass/main.css -->
-    <link rel="stylesheet" href="sass/main.css">
+    <!-- build:css(.tmp) css/main.css -->
+    <link rel="stylesheet" href="css/main.css">
     <!-- endbuild -->
   </head>
   <body>
