added shift app. Submodules next.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- build:css(.tmp) css/main.css -->
-    <link rel="stylesheet" href="css/main.css">
+    <!--<link rel="stylesheet" href="css/main.css">-->
     <!-- endbuild -->
   </head>
   <body>
