shift signup works and propgates across subcollections

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,6 +4,7 @@
     <!-- build:css(.tmp) css/main.css -->
     <!--<link rel="stylesheet" href="css/main.css">-->
     <!-- endbuild -->
+    <link rel="stylesheet" href="css/temp.css">
   </head>
   <body>
     <div id="app"></div>
@@ -12,7 +13,7 @@
   <!-- build:remove -->
   <script src="/bower_components/requirejs/require.js"></script>
   <!-- endbuild -->
-
+  
   <script data-main="js/main" src="js/main.js"></script>
 
 </html>
