--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,16 +4,13 @@
     <!-- build:css(.tmp) css/main.css -->
     <!--<link rel="stylesheet" href="css/main.css">-->
     <!-- endbuild -->
-    <link rel="stylesheet" href="css/temp.css">
+    <link rel="stylesheet" href="/static/css/temp.css">
   </head>
   <body>
     <div id="app"></div>
   </body>
 
-  <!-- build:remove -->
-  <script src="/bower_components/requirejs/require.js"></script>
-  <!-- endbuild -->
-  
-  <script data-main="js/main" src="js/main.js"></script>
+  <script src="/static/js/lib/require.js" data-main="/static/js/main"></script>
+
 
 </html>
